# SGPviaZZLP

./: .gitignore  CMakeLists.txt  README.md  SGPviaZZLP.slnx  SingletonAlphabetSGPviaZZ_ILP.slnx
SGPviaZZLP/: CMakeLists.txt  EveryExactSmallestGrammar.cpp  EveryExactSmallestGrammar.h  SGPAlgorithm.h  SGPviaZZLP.cpp  SGPviaZZLP.h  SGPviaZZLP.vcxproj  SGPviaZZLP.vcxproj.filters  StraightLineGrammar.h  ZeroOneILPAlgorithm.h  main.cpp
SingletonAlphabetSGPviaZZ_ILP/: SGPviaZZ_ILP..h  SGPviaZZ_ILP.cpp  SingletonAlphabetSGPviaZZ_ILP.cpp  SingletonAlphabetSGPviaZZ_ILP.vcxproj  SingletonAlphabetSGPviaZZ_ILP.vcxproj.filters  StraightLineGrammar.cpp  StraightLineGrammar.h
